# Embedded-Software-Projects

./: .gitignore  CMakeLists.txt  README.md
JFlash/: STM32F107xC.jflash
src/app/blink/: CMakeLists.txt  README.md  main.c
src/app/cli/: CMakeLists.txt  README.MD  main.c
src/app/cli/CliInterface/: CliInterface.h  SimpleCli.c
src/app/cli/CommandInterpreter/: CommandInterpreter.c  CommandInterpreter.h
src/app/timer/: CMakeLists.txt  README.md  main.c
src/mcu/avr/: GPIO.c  SystemClock.c  TIMER.c  USART.c  mcu.c  util.c
src/mcu/stm32/: ErrorHandler.c  ErrorHandler.h  GPIO.c  GPIOModule.c  SystemClock.c  TIMER.c  TimerModule.c  USART.c  mcu.c  retarget.c  retarget.h  stm32f1xx_hal_conf.h  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32f1xx_it.h  syscalls.c  util.c
src/peripheral/: GPIO.h  SystemClock.h  TIMER.c  TIMER.h  USART.h  util.h
src/shared/: FunctionPointers.h  GPIOModule.h  TimerModule.h  banned.h  debug.h  mcu.h
src/shared/CliInterface/: CliInterface.h  SimpleInterface.c
src/shared/CommandInterpreter/: CommandInterpreter.c  CommandInterpreter.h
